--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -4,12 +4,19 @@
 body {
     font-family: 'Roboto', sans-serif;
 }
+.list {
+    list-style: none;
+}
 
 .link {
     text-decoration: none;
 }
+.link:hover, .link:focus{
+color: #f35d21;
+}
 
 .first-part {
+    font-family: 'Raleway', sans-serif;
     font-weight: 700;
     font-size: 14px;
     line-height: calc(16 / 12);
@@ -18,6 +25,7 @@ body {
 }
 
 .last-part {
+    font-family: 'Raleway', sans-serif;
     font-weight: 700;
     font-size: 14px;
     line-height: calc(16 / 12);
@@ -25,25 +33,22 @@ body {
     color: #000000;
 }
 
-/* HEADER */
-.header {
-    background-color: #2196F3;
+.header-nav-link {
+    font-weight: 500;
+    font-size: 14px;
+    line-height: calc(16 / 12);
+    letter-spacing: 0.02em;
+    color: #2196F3; 
 }
 
-.header-nav-item {
+.header-link-tel link {
     font-weight: 500;
     font-size: 14px;
     line-height: calc(16 / 12);
     letter-spacing: 0.02em;
     color: #2196F3;
-
 }
-
-.header-nav-item :hover .header-nav-item :focus {
-    color: #f35d21;
-}
-
-.header-link-tel link {
+.header-nav-item {
     font-weight: 500;
     font-size: 14px;
     line-height: calc(16 / 12);
@@ -58,16 +63,18 @@ body {
 
 .hero-title {
     font-weight: 900;
-    font-size: 44;
+    font-size: 44px;
     line-height: calc(16 / 12);
     letter-spacing: 0.06em;
+    text-align: center;
     color: #FFFFFF;
 
 }
 
 .hero-btn {
+    font-family: 'Roboto', sans-serif;
     font-weight: 700;
-    font-size: 30;
+    font-size: 30px;
     line-height: calc(16 / 12);
     letter-spacing: 0.06em;
     color: #FFFFFF;
@@ -77,7 +84,7 @@ body {
 /* PECUL */
 .pecul-title {
     font-weight: 700;
-    font-size: 14;
+    font-size: 14px;
     line-height: calc(16 / 12);
     letter-spacing: 0.03em;
     color: #212121;
@@ -86,7 +93,7 @@ body {
 
 .pecul-title-before {
     font-weight: 400;
-    font-size: 14;
+    font-size: 14px;
     line-height: calc(16 / 12);
     letter-spacing: 0.03em;
     color: #757575;
@@ -95,7 +102,7 @@ body {
 /* DOING */
 .doing-title {
     font-weight: 700;
-    font-size: 36;
+    font-size: 36px;
     line-height: calc(16 / 12);
     letter-spacing: 0.03em;
     color: #212121;
@@ -106,7 +113,7 @@ body {
 
 .team-title {
     font-weight: 700;
-    font-size: 36;
+    font-size: 36px;
     line-height: calc(16 / 12);
     letter-spacing: 0.03em;
     color: #212121;
@@ -114,7 +121,7 @@ body {
 
 .team-title-before {
     font-weight: 500;
-    font-size: 16;
+    font-size: 16px;
     line-height: calc(16 / 12);
     letter-spacing: 0.03em;
     color: #212121;
@@ -123,7 +130,7 @@ body {
 /* FOTER */
 .foter {
     font-weight: 500;
-    font-size: 16;
+    font-size: 16px;
     line-height: calc(16 / 12);
     letter-spacing: 0.03em;
     color: #212121;
